--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "bootstrap": "^4.3.1",
     "enzyme-adapter-react-15": "^1.4.1",
     "i": "^0.3.6",
-    "jest": "^24.9.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "npm": "^6.13.4",
@@ -29,6 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,8 +48,10 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.3.2",
+    "coveralls": "^3.0.9",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "jest": "^24.9.0",
     "jest-dom": "^4.0.0",
     "react-test-render": "^1.1.2"
   }
