--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@datepicker-react/styled": "^2.1.4",
     "axios": "^0.19.0",
+    "babel-jest": "^24.9.0",
     "bootstrap": "^4.3.1",
     "enzyme-adapter-react-15": "^1.4.1",
     "i": "^0.3.6",
