--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@datepicker-react/styled": "^2.1.4",
     "axios": "^0.19.0",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "bootstrap": "^4.3.1",
     "enzyme-adapter-react-15": "^1.4.1",
     "i": "^0.3.6",
