--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-jest": "^24.9.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
     "enzyme-adapter-react-15": "^1.4.1",
     "i": "^0.3.6",
