--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,13 @@
 {
-  "env": {
-    "test": {
-      "presets": ["env", "react", "stage-2"],
-      "plugins": ["transform-export-extensions"],
-      "only": [
-        "./**/*.js",
-        "node_modules/jest-runtime"
-      ]
-    }
-  }
+  "presets": [
+    "env",
+    "react",
+    "stage-0"
+  ],
+  "plugins": [
+    "transform-class-properties",
+    "transform-decorators",
+    "transform-react-constant-elements",
+    "transform-react-inline-elements"
+  ]
 }
-
-    
