--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@datepicker-react/styled": "^2.1.4",
     "axios": "^0.19.0",
+    "babel-env": "^2.4.1",
     "babel-jest": "^24.9.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-preset-env": "^1.7.0",
