--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,9 @@ Scipt:
   - npm run test
   - npm run build --prod
 
+after_success:
+ - npm run deploy
 
-Deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  keep-history: true
-  local-dir: ./dist/FunFrontend
-  on:
+
 
 
