--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "funapplicatie",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vincenzo3945.github.io/FunFrontend",
   "dependencies": {
     "@datepicker-react/styled": "^2.1.4",
     "axios": "^0.19.0",
@@ -11,6 +12,7 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
     "enzyme-adapter-react-15": "^1.4.1",
+    "gh-pages": "^2.2.0",
     "i": "^0.3.6",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
@@ -31,6 +33,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",   
+    "deploy": "gh-pages -d build", 
     "test": "react-scripts test --coverage",
     "testN": "nodeunit",
     "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
