--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",   
-    "deploy": "gh-pages -d build", 
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --coverage",
     "testN": "nodeunit",
     "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
@@ -64,13 +64,15 @@
     "coveralls": "^3.0.9",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.17.0",
     "grunt": "^1.0.4",
-    "grunt-karma-coveralls": "^2.5.4",
     "grunt-cli": "*",
+    "grunt-karma-coveralls": "^2.5.4",
     "jest": "^24.9.0",
     "jest-dom": "^4.0.0",
-    "react-test-render": "^1.1.2",
-    "nodeunit": "*"
+    "nodeunit": "*",
+    "react-test-render": "^1.1.2"
   },
   "babel": {
     "presets": [
