--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,14 @@ node_js:
 install:
   - npm ci
 
+  deploy:
+  provider: pages
+  skip_cleanup: true
+  #github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
+
 Scipt:
   
   - npm run test
