--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ node_js:
 install:
   - npm ci
 
+
   
 
 Scipt:
@@ -18,6 +19,7 @@ Scipt:
 
 
 deploy:
+CI: false
   provider: pages
   skip_cleanup: true
   github_token:  be1734e4aacd6ab29e4e8797d738b93a88aa356b   # Set in the settings page of your repository, as a secure variable
