--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ node_js:
 install:
   - npm ci
 
-
+travis:
+  - CI=false
   
 
 Scipt:
@@ -27,7 +28,7 @@ deploy:
   keep_history: true
   on:
     branch: master
-    
+
 
 
 
